--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <li><a href="./contact.html">Contact</a></li>
     <li><a href="./product.html">Product</a></li>
    </ul>
+      <p>sagor</p>
   </nav>
   <form class="navbar-form navbar-left">
    <input type="text" class="form-control col-lg-8" placeholder="Search">
