--- a/about.html
+++ b/about.html
@@ -9,37 +9,25 @@
 </head>
 <body>
  <div class="about-header">
-   <h2 align="center">About Us</h2>
+   <h2 align="center" class="page-title">About Us</h2>
     <br>
-     <p align="center">
+    <br>
+    <br>
+     <p align="center" class="team-logo">
        <a href="https://github.com/errorinterface">
-        <img width="150px" src="https://user-images.githubusercontent.com/106418317/170813974-684ecc3e-75c6-4d3e-aee2-5ea9d53b1ea3.png" alt="logo">
+        <img src="https://user-images.githubusercontent.com/106418317/170813974-684ecc3e-75c6-4d3e-aee2-5ea9d53b1ea3.png" alt="logo">
        </a>
       </p>
     <br>
-    <h1 align="center">Error Interface</h1>
+    <h1 align="center" class="title">Error Interface</h1>
     <br>
     <h4 align="center">Website Design Team</h4>
 </div>
-<div class="about-part">
-    <div class="joy">
+<div class="about-bodyr">
 
-    </div>
-    <div class="mehedi">
-
-    </div>
-    <div class="sagor">
-
-    </div>
-    <div class="mamun">
-
-    </div>
-    <div class="Shofiqul">
-     
-    </div>
 </div>
 <div class="about-footer">
-
+ <p>This is About Footer</p>
 </div>
 </body>
 </html>
