--- a/index.html
+++ b/index.html
@@ -1,36 +1,121 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
- <meta charset="UTF-8">
- <meta http-equiv="X-UA-Compatible" content="IE=edge">
- <meta name="viewport" content="width=device-width, initial-scale=1.0">
- <link rel="shortcut icon" href="favicon.ico" type="img/x-icon">
- <link rel="stylesheet" href="./css/style.css">
- <link rel="stylesheet" href="./css/responsive.css">
- <link rel="stylesheet" href="./css/bootstrap.min.css">
- <title>AppStore</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Projects Title</title>
+    <link rel="shortcut icon" href="img/logo.png" type="image/x-icon">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/slick.css">
+    <link rel="stylesheet" href="css/slick-theme.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
- <div class="header">
-  <p align="center"><a href="#"><img width="150px" src="./img/appstore-logo.png" alt="logo"></a></p>
-  <nav>
-   <ul>
-    <li><a href="./about.html">About</a></li>
-    <li><a href="./contact.html">Contact</a></li>
-    <li><a href="./product.html">Product</a></li>
-   </ul>
-  </nav>
-  <form class="navbar-form navbar-left">
-   <input type="text" class="form-control col-lg-8" placeholder="Search">
- </form>
- </div>
- <br>
- <div class="bg">
- <h3 align="center">Products</h3>
- </div>
- <div class="footer">
- </div>
- <script src="./js/script.js"></script>
- <script src="./js/bootstrap.min.js"></script>
+
+
+    <header>
+        <nav class="navbar navbar-expand-lg ">
+            <div class="container">
+              <a class="navbar-brand" href="#"><img src="img/logo.png" alt=""></a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon">
+                    <img class="menu-bar" src="img/menu.png" alt="">
+                </span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                  <li class="nav-item">
+                    <a class="nav-link" aria-current="page" href="#">Home</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Product</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">About Us</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Contact</a>
+                  </li>
+                  
+                </ul>
+                <div class="ml-auto">
+                    <form action="">
+                        <div class="input-box">
+                            <input class="inp" type="text">
+                            <img class="search-icon" src="img/search.png" alt="">
+                        </div>
+                    </form>
+                </div>
+            </div>
+          </nav>
+          <!-- navbar end  -->
+
+          <div class="hero-section">
+              <div class="container slider-container">
+
+                  <div class="row main-content d-flex">
+                      <div class="col-12 col-md-6">
+                            <div class="hero-content">
+                                <p class="display-4">LIMITED <br>
+                                HOT WEEK DEALS
+                                </p>
+                                <p class="text-muted">Discount's on Product</p>
+                                <div class="btn btn-custom">Shop Now </div>
+                          </div>
+                      </div>
+                      <div class="col-12 col-md-6 img-right ">
+                          <img class="slider-img" src="img/image1.png" alt="">
+                      </div>
+                    </div>
+                    
+                    <div class="row main-content d-flex">
+                        <div class="col-12 col-md-6">
+                            <div class="hero-content">
+                                <p class="display-4">50-50 SALE<br>
+                                    BUY NOW
+                                  </p>
+                                  <p class="text-muted">Discount 20% on each products</p>
+                                  <div class="btn btn-custom">Shop Now </div>
+                              </div>
+                        </div>
+                        <div class="col-12 col-md-6 img-right ">
+                            <img class="slider-img" src="img/image2.png" alt="">
+                        </div>
+                      </div>
+
+                      <div class="row main-content d-flex">
+                        <div class="col-12 col-md-6">
+                            <div class="hero-content">
+                                <p class="display-4">BIG SALE<br>
+                                    TOP ACCESSORIES
+                                  </p>
+                                  <p class="text-muted">Discount 20% on each products</p>
+                                  <div class="btn btn-custom">Shop Now </div>
+                              </div>
+                        </div>
+                        <div class="col-12 col-md-6 img-right ">
+                            <img class="slider-img" src="img/image3.png" alt="">
+                        </div>
+                      </div>
+              </div>
+          </div>
+    </header>
+
+
+    <script src="js/bootstrap.bundle.js"></script>
+    <script src="js/jquery.min.js"></script>
+    <script src="js/slick.js"></script>
+
+    <script>
+        $(document).ready(function(){
+  $('.slider-container').slick({
+
+        });
+    });
+    </script>
 </body>
+
 </html>
