--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
     <br>
     <h4 align="center">Website Design Team</h4>
 </div>
-<div class="about-bodyr">
+<div class="about-body">
 
 </div>
 <div class="about-footer">
