--- a/about.html
+++ b/about.html
@@ -1,33 +1,152 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
- <meta charset="UTF-8">
- <meta http-equiv="X-UA-Compatible" content="IE=edge">
- <meta name="viewport" content="width=device-width, initial-scale=1.0">
- <link rel="stylesheet" href="./css/about.css">
- <title>About Us</title>
-</head>
-<body>
- <div class="about-header">
-   <h2 align="center" class="page-title">About Us</h2>
-    <br>
-    <br>
-    <br>
-     <p align="center" class="team-logo">
-       <a href="https://github.com/errorinterface">
-        <img src="https://user-images.githubusercontent.com/106418317/170813974-684ecc3e-75c6-4d3e-aee2-5ea9d53b1ea3.png" alt="logo">
-       </a>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./css/about.css" />
+    <title>About</title>
+  </head>
+  <body>
+    <!--About Header Start -->
+    <div class="about-header-upper">
+      <ul>
+        <li><a href="./index.html">Home</a></li>
+        <li><a href="./Product.html">Product</a></li>
+        <li><a href="./about.html" class="active">About</a></li>
+        <li><a href="./contact.html">Contact</a></li>
+      </ul>
+    </div>
+    <div class="about-header-lower">
+      <p class="team-logo">
+        <a href="https://github.com/errorinterface">
+          <img src="./img/errorinterface-circle.png" alt="logo" />
+        </a>
       </p>
-    <br>
-    <h1 align="center" class="title">Error Interface</h1>
-    <br>
-    <h4 align="center">Website Design Team</h4>
-</div>
-<div class="about-body">
-
-</div>
-<div class="about-footer">
- <p>This is About Footer</p>
-</div>
-</body>
+      <br />
+      <h1>
+        Error Interface <br />
+        Team
+      </h1>
+      <br />
+      <h4 class="text">
+        We are a Website Design Team from Faridpur Polytechnic Institute
+      </h4>
+    </div>
+    <!-- About Header Finished -->
+    <!-- About Body Start -->
+    <div class="about-body">
+      <h1 align="center" class="body-header">Our Team Members</h1>
+      <div class="container">
+        <!-- Mehedi Profile Design Start -->
+        <div class="card">
+          <div class="card-image">
+            <img src="./img/mehedi.png" alt="iammrmehedi" />
+          </div>
+          <div class="card-info">
+            <h3 class="name">Mehedi Hasan</h3>
+            <p class="details">
+              I Worked on the About Section of this Project.
+            </p>
+          </div>
+          <div class="card-social-icons">
+            <a href=""><img src="./img/facebook.png" alt="facebook" /></a>
+            <a href=""><img src="./img/GitHub.png" alt="github" /></a>
+            <a href=""><img src="./img/instagram.png" alt="instagram" /></a>
+            <a href=""><img src="./img/twitter.png" alt="twitter" /></a>
+          </div>
+        </div>
+        <!-- Mehedi Profile Design End -->
+        <!-- Joy Profile Design Start -->
+        <div class="card">
+          <div class="card-image">
+            <img src="./img/joy.png" alt="joysen12" />
+          </div>
+          <div class="card-info">
+            <h3 class="name">Joy Sen</h3>
+            <p class="details">I Worked on the Home Section of this Project.</p>
+          </div>
+          <div class="card-social-icons">
+            <a href=""><img src="./img/facebook.png" alt="facebook" /></a>
+            <a href=""><img src="./img/GitHub.png" alt="github" /></a>
+            <a href=""><img src="./img/instagram.png" alt="instagram" /></a>
+            <a href=""><img src="./img/twitter.png" alt="twitter" /></a>
+          </div>
+        </div>
+        <!-- Joy Profile Design End -->
+        <!-- Sagor Profile Design Start -->
+        <div class="card">
+          <div class="card-image">
+            <img src="./img/sagor.png" alt="sagor" />
+          </div>
+          <div class="card-info">
+            <h3>Sagor Vuiya</h3>
+            <p class="details">
+              I Worked on the Contact Section of this Project
+            </p>
+          </div>
+          <div class="card-social-icons">
+            <a href=""><img src="./img/facebook.png" alt="facebook" /></a>
+            <a href=""><img src="./img/GitHub.png" alt="github" /></a>
+            <a href=""><img src="./img/instagram.png" alt="instagram" /></a>
+            <a href=""><img src="./img/twitter.png" alt="twitter" /></a>
+          </div>
+        </div>
+        <!-- Sagor Profile Design Start -->
+        <!-- Mamun Profile Design Start -->
+        <div class="card">
+          <div class="card-image">
+            <img src="./img/mamun.png" alt="mamun" />
+          </div>
+          <div class="card-info">
+            <h3>Mamun Hossain</h3>
+            <p class="details">
+              I Worked on the Product Section of this Project.
+            </p>
+          </div>
+          <div class="card-social-icons">
+            <a href=""><img src="./img/facebook.png" alt="facebook" /></a>
+            <a href=""><img src="./img/GitHub.png" alt="github" /></a>
+            <a href=""><img src="./img/instagram.png" alt="instagram" /></a>
+            <a href=""><img src="./img/twitter.png" alt="twitter" /></a>
+          </div>
+        </div>
+        <!-- Mamun Profile Design End -->
+        <!-- Shofiqul Profile Design Start -->
+        <div class="card">
+          <div class="card-image">
+            <img src="./img/shofiqul.png" alt="shofiqul" />
+          </div>
+          <div class="card-info">
+            <h3>Shofiqul Islam</h3>
+            <p class="details">I Worked on the ___ Section of this Project.</p>
+          </div>
+          <div class="card-social-icons">
+            <a href=""><img src="./img/facebook.png" alt="facebook" /></a>
+            <a href=""><img src="./img/GitHub.png" alt="github" /></a>
+            <a href=""><img src="./img/instagram.png" alt="instagram" /></a>
+            <a href=""><img src="./img/twitter.png" alt="twitter" /></a>
+          </div>
+        </div>
+        <!-- Shofiqul Profile Design Finished -->
+      </div>
+    </div>
+    <!-- About Body Finished -->
+    <!-- About Footer Start -->
+    <div class="about-footer">
+      <div class="footer-menu">
+        <ul>
+          <li><a href="./index.html">Home</a></li>
+          <li><a href="./Product.html">Product</a></li>
+          <li><a href="./contact.html">Contact</a></li>
+        </ul>
+      </div>
+      <div class="footer-copyright">
+        ErrorShop is Designed by
+        <a href="https://github.com/errorinterface">ErrorInterface</a> &copy;
+        2022 All Rights Reserved.
+      </div>
+    </div>
+    <!-- About Footer End -->
+  </body>
 </html>
