--- a/about.html
+++ b/about.html
@@ -17,118 +17,164 @@
         <li><a href="./contact.html">Contact</a></li>
       </ul>
     </div>
-    <div class="about-header-lower">
-      <p class="team-logo">
-        <a href="https://github.com/errorinterface">
-          <img src="./img/errorinterface-circle.png" alt="logo" />
-        </a>
-      </p>
-      <br />
-      <h1>
-        Error Interface <br />
-        Team
-      </h1>
-      <br />
-      <h4 class="text">
-        We are a Website Design Team from Faridpur Polytechnic Institute
-      </h4>
-    </div>
-    <!-- About Header Finished -->
-    <!-- About Body Start -->
-    <div class="about-body">
-      <h1 align="center" class="body-header">Our Team Members</h1>
-      <div class="container">
-        <!-- Mehedi Profile Design Start -->
-        <div class="card">
-          <div class="card-image">
-            <img src="./img/mehedi.png" alt="iammrmehedi" />
+    <div class="middle-part">
+      <div class="about-header-lower">
+        <p class="team-logo">
+          <a href="https://github.com/errorinterface">
+            <img src="./img/errorinterface-circle.png" alt="logo" />
+          </a>
+        </p>
+        <br />
+        <h1>
+          Error Interface <br />
+          Team
+        </h1>
+        <br />
+        <h4 class="text">
+          We are a Website Design Team from Faridpur Polytechnic Institute
+        </h4>
+      </div>
+      <!-- About Header Finished -->
+      <!-- About Body Start -->
+      <div class="about-body">
+        <h1 align="center" class="body-header">Our Team Members</h1>
+        <div class="container">
+          <!-- Mehedi Profile Design Start -->
+          <div class="card">
+            <div class="card-image">
+              <img src="./img/mehedi.png" alt="iammrmehedi" />
+            </div>
+            <div class="card-info">
+              <h3 class="name">Mehedi Hasan</h3>
+              <p class="details">
+                I Worked on the About Section of this Project.
+              </p>
+            </div>
+            <div class="card-social-icons">
+              <a href="https://facebook.com/iammrmehedii" target="_blank"
+                ><img src="./img/facebook.png" alt="facebook"
+              /></a>
+              <a href="https://github.com/iammrmehedi" target="_blank"
+                ><img src="./img/GitHub.png" alt="github"
+              /></a>
+              <a href="https://instagram.com/iammrmehedi" target="_blank"
+                ><img src="./img/instagram.png" alt="instagram"
+              /></a>
+              <a href="https://twitter.com/iammrmehedi" target="_blank"
+                ><img src="./img/twitter.png" alt="twitter"
+              /></a>
+            </div>
           </div>
-          <div class="card-info">
-            <h3 class="name">Mehedi Hasan</h3>
-            <p class="details">
-              I Worked on the About Section of this Project.
-            </p>
+          <!-- Mehedi Profile Design End -->
+          <!-- Joy Profile Design Start -->
+          <div class="card">
+            <div class="card-image">
+              <img src="./img/joy.png" alt="joysen12" />
+            </div>
+            <div class="card-info">
+              <h3 class="name">Joy Sen</h3>
+              <p class="details">
+                I Worked on the Home Section of this Project.
+              </p>
+            </div>
+            <div class="card-social-icons">
+              <a href="https://www.facebook.com/joysen1912" target="_blank"
+                ><img src="./img/facebook.png" alt="facebook"
+              /></a>
+              <a href="https://www.github.com/joysen12" target="_blank"
+                ><img src="./img/GitHub.png" alt="github"
+              /></a>
+              <a href="https://www.instagram.com/joy._.sen" target="_blank"
+                ><img src="./img/instagram.png" alt="instagram"
+              /></a>
+              <a href="https://twitter.com/joy_sen1912" target="_blank"
+                ><img src="./img/twitter.png" alt="twitter"
+              /></a>
+            </div>
           </div>
-          <div class="card-social-icons">
-            <a href=""><img src="./img/facebook.png" alt="facebook" /></a>
-            <a href=""><img src="./img/GitHub.png" alt="github" /></a>
-            <a href=""><img src="./img/instagram.png" alt="instagram" /></a>
-            <a href=""><img src="./img/twitter.png" alt="twitter" /></a>
+          <!-- Joy Profile Design End -->
+          <!-- Sagor Profile Design Start -->
+          <div class="card">
+            <div class="card-image">
+              <img src="./img/sagor.png" alt="sagor" />
+            </div>
+            <div class="card-info">
+              <h3>Sagor Vuiya</h3>
+              <p class="details">
+                I Worked on the Contact Section of this Project
+              </p>
+            </div>
+            <div class="card-social-icons">
+              <a href="https://www.facebook.com/mdsv.2015" target="_blank"
+                ><img src="./img/facebook.png" alt="facebook"
+              /></a>
+              <a href="#" target="_blank"
+                ><img src="./img/GitHub.png" alt="github"
+              /></a>
+              <a href="#" target="_blank"
+                ><img src="./img/instagram.png" alt="instagram"
+              /></a>
+              <a href="#" target="_blank"
+                ><img src="./img/twitter.png" alt="twitter"
+              /></a>
+            </div>
           </div>
+          <!-- Sagor Profile Design Start -->
+          <!-- Mamun Profile Design Start -->
+          <div class="card">
+            <div class="card-image">
+              <img src="./img/mamun.png" alt="mamun" />
+            </div>
+            <div class="card-info">
+              <h3>Mamun Hossain</h3>
+              <p class="details">
+                I Worked on the Product Section of this Project.
+              </p>
+            </div>
+            <div class="card-social-icons">
+              <a href="https://www.facebook.com/md.mhmamun.cse" target="_blank"
+                ><img src="./img/facebook.png" alt="facebook"
+              /></a>
+              <a href="#" target="_blank"
+                ><img src="./img/GitHub.png" alt="github"
+              /></a>
+              <a href="#" target="_blank"
+                ><img src="./img/instagram.png" alt="instagram"
+              /></a>
+              <a href="#" target="_blank"
+                ><img src="./img/twitter.png" alt="twitter"
+              /></a>
+            </div>
+          </div>
+          <!-- Mamun Profile Design End -->
+          <!-- Shofiqul Profile Design Start -->
+          <div class="card">
+            <div class="card-image">
+              <img src="./img/shofiqul.png" alt="shofiqul" />
+            </div>
+            <div class="card-info">
+              <h3>Shofiqul Islam</h3>
+              <p class="details">
+                I Worked on the ___ Section of this Project.
+              </p>
+            </div>
+            <div class="card-social-icons">
+              <a href="#" target="_blank"
+                ><img src="./img/facebook.png" alt="facebook"
+              /></a>
+              <a href="#" target="_blank"
+                ><img src="./img/GitHub.png" alt="github"
+              /></a>
+              <a href="#" target="_blank"
+                ><img src="./img/instagram.png" alt="instagram"
+              /></a>
+              <a href="#" target="_blank"
+                ><img src="./img/twitter.png" alt="twitter"
+              /></a>
+            </div>
+          </div>
+          <!-- Shofiqul Profile Design Finished -->
         </div>
-        <!-- Mehedi Profile Design End -->
-        <!-- Joy Profile Design Start -->
-        <div class="card">
-          <div class="card-image">
-            <img src="./img/joy.png" alt="joysen12" />
-          </div>
-          <div class="card-info">
-            <h3 class="name">Joy Sen</h3>
-            <p class="details">I Worked on the Home Section of this Project.</p>
-          </div>
-          <div class="card-social-icons">
-            <a href=""><img src="./img/facebook.png" alt="facebook" /></a>
-            <a href=""><img src="./img/GitHub.png" alt="github" /></a>
-            <a href=""><img src="./img/instagram.png" alt="instagram" /></a>
-            <a href=""><img src="./img/twitter.png" alt="twitter" /></a>
-          </div>
-        </div>
-        <!-- Joy Profile Design End -->
-        <!-- Sagor Profile Design Start -->
-        <div class="card">
-          <div class="card-image">
-            <img src="./img/sagor.png" alt="sagor" />
-          </div>
-          <div class="card-info">
-            <h3>Sagor Vuiya</h3>
-            <p class="details">
-              I Worked on the Contact Section of this Project
-            </p>
-          </div>
-          <div class="card-social-icons">
-            <a href=""><img src="./img/facebook.png" alt="facebook" /></a>
-            <a href=""><img src="./img/GitHub.png" alt="github" /></a>
-            <a href=""><img src="./img/instagram.png" alt="instagram" /></a>
-            <a href=""><img src="./img/twitter.png" alt="twitter" /></a>
-          </div>
-        </div>
-        <!-- Sagor Profile Design Start -->
-        <!-- Mamun Profile Design Start -->
-        <div class="card">
-          <div class="card-image">
-            <img src="./img/mamun.png" alt="mamun" />
-          </div>
-          <div class="card-info">
-            <h3>Mamun Hossain</h3>
-            <p class="details">
-              I Worked on the Product Section of this Project.
-            </p>
-          </div>
-          <div class="card-social-icons">
-            <a href=""><img src="./img/facebook.png" alt="facebook" /></a>
-            <a href=""><img src="./img/GitHub.png" alt="github" /></a>
-            <a href=""><img src="./img/instagram.png" alt="instagram" /></a>
-            <a href=""><img src="./img/twitter.png" alt="twitter" /></a>
-          </div>
-        </div>
-        <!-- Mamun Profile Design End -->
-        <!-- Shofiqul Profile Design Start -->
-        <div class="card">
-          <div class="card-image">
-            <img src="./img/shofiqul.png" alt="shofiqul" />
-          </div>
-          <div class="card-info">
-            <h3>Shofiqul Islam</h3>
-            <p class="details">I Worked on the ___ Section of this Project.</p>
-          </div>
-          <div class="card-social-icons">
-            <a href=""><img src="./img/facebook.png" alt="facebook" /></a>
-            <a href=""><img src="./img/GitHub.png" alt="github" /></a>
-            <a href=""><img src="./img/instagram.png" alt="instagram" /></a>
-            <a href=""><img src="./img/twitter.png" alt="twitter" /></a>
-          </div>
-        </div>
-        <!-- Shofiqul Profile Design Finished -->
       </div>
     </div>
     <!-- About Body Finished -->
