--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,40 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./css/contact.css">
     <title>Contact</title>
   </head>
-  <body></body>
+  <body>
+     <!-- header part start -->
+    <div class="about-header-upper">
+      <ul>
+        <li><a href="./index.html">Home</a></li>
+        <li><a href="./Product.html">Product</a></li>
+        <li><a href="./about.html" class="active">About</a></li>
+        <li><a href="./contact.html">Contact</a></li>
+      </ul>
+    </div>
+    <!-- header part end -->
+    <!-- main body part start -->
+    <div class="main-contact-body">
+      <p>Contact Part Here</p>
+    </div>
+    <!-- main body part End -->
+    <!-- footer part start -->
+    <div class="about-footer">
+      <div class="footer-menu">
+        <ul>
+          <li><a href="./index.html">Home</a></li>
+          <li><a href="./Product.html">Product</a></li>
+          <li><a href="./about.html">About</a></li>
+        </ul>
+      </div>
+      <div class="footer-copyright">
+        ErrorShop is Designed by
+        <a href="https://github.com/errorinterface">ErrorInterface</a> &copy;
+        2022 All Rights Reserved.
+      </div>
+    </div>
+    <!-- footer part end -->
+  </body>
 </html>
