--- a/index.html
+++ b/index.html
@@ -152,9 +152,9 @@
           <div class="col-md-3">
             <h4>QUICK LINKS</h4>
             <ul>
-              <li><a href="#">Product</a></li>
-              <li><a href="#">About</a></li>
-              <li><a href="#">Contact</a></li>
+              <li><a href="./Product.html">Product</a></li>
+              <li><a href="./about.html">About</a></li>
+              <li><a href="./contact.html">Contact</a></li>
             </ul>
           </div>
           <div class="col-md-2">
@@ -178,7 +178,7 @@
         </div>
       </div>
       <div class="copyright-text mt-5 text-center">
-        ErrorShop is a product of <a href="#" class="text-danger"> ErrorInterface</a> &copy; 2022 All Rights Reserved.
+        ErrorShop is Designed by<a href="#" class="text-danger"> ErrorInterface</a> &copy; 2022 All Rights Reserved.
       </div>
     </footer>
 
