--- a/product.html
+++ b/product.html
@@ -167,7 +167,20 @@
     </div>
   </div>
 
-
+  <div class="about-footer">
+    <div class="footer-menu">
+      <ul>
+        <li><a href="./index.html">Home</a></li>
+        <li><a href="./about.html">About</a></li>
+        <li><a href="./contact.html">Contact</a></li>
+      </ul>
+    </div>
+    <div class="footer-copyright">
+      ErrorShop is Designed by
+      <a href="https://github.com/errorinterface">ErrorInterface</a> &copy;
+      2022 All Rights Reserved.
+    </div>
+  </div>
 
 </body>
 <script src="js/bootstrap.min.js"></script>
