--- a/product.html
+++ b/product.html
@@ -13,7 +13,7 @@
   <div class="about-header-upper">
     <ul>
       <li><a href="./index.html">Home</a></li>
-      <li><a href="./Product.html"class="active">Product</a></li>
+      <li><a href="./product.html"class="active">Product</a></li>
       <li><a href="./about.html" >About</a></li>
       <li><a href="./contact.html">Contact</a></li>
     </ul>
