--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
     <div class="about-header-upper">
       <ul>
         <li><a href="./index.html">Home</a></li>
-        <li><a href="./Product.html">Product</a></li>
+        <li><a href="./product.html">Product</a></li>
         <li><a href="./about.html" class="active">About</a></li>
         <li><a href="./contact.html">Contact</a></li>
       </ul>
@@ -184,7 +184,7 @@
       <div class="footer-menu">
         <ul>
           <li><a href="./index.html">Home</a></li>
-          <li><a href="./Product.html">Product</a></li>
+          <li><a href="./product.html">Product</a></li>
           <li><a href="./contact.html">Contact</a></li>
         </ul>
       </div>
