--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <a class="nav-link" aria-current="page" href="#">Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="./Product.html">Product</a>
+                    <a class="nav-link" href="./product.html">Product</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="./about.html">About</a>
@@ -152,7 +152,7 @@
           <div class="col-md-3">
             <h4>QUICK LINKS</h4>
             <ul>
-              <li><a href="./Product.html">Product</a></li>
+              <li><a href="./product.html">Product</a></li>
               <li><a href="./about.html">About</a></li>
               <li><a href="./contact.html">Contact</a></li>
             </ul>
