--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" href="img/logo.png" type="image/x-icon">
+    <link rel="shortcut icon" href="img/logo.png" type="image/x-icon" />
     <link rel="stylesheet" href="./css/about.css" />
     <title>About</title>
   </head>
@@ -109,13 +109,13 @@
               <a href="https://www.facebook.com/mdsv.2015" target="_blank"
                 ><img src="./img/facebook.png" alt="facebook"
               /></a>
-              <a href="#" target="_blank"
+              <a href="https://www.github.com" target="_blank"
                 ><img src="./img/GitHub.png" alt="github"
               /></a>
-              <a href="#" target="_blank"
+              <a href="https://www.instagram.com" target="_blank"
                 ><img src="./img/instagram.png" alt="instagram"
               /></a>
-              <a href="#" target="_blank"
+              <a href="https://www.twitter.com" target="_blank"
                 ><img src="./img/twitter.png" alt="twitter"
               /></a>
             </div>
@@ -136,13 +136,13 @@
               <a href="https://www.facebook.com/md.mhmamun.cse" target="_blank"
                 ><img src="./img/facebook.png" alt="facebook"
               /></a>
-              <a href="#" target="_blank"
+              <a href="https://www.github.com" target="_blank"
                 ><img src="./img/GitHub.png" alt="github"
               /></a>
-              <a href="#" target="_blank"
+              <a href="https://www.instagram.com" target="_blank"
                 ><img src="./img/instagram.png" alt="instagram"
               /></a>
-              <a href="#" target="_blank"
+              <a href="https://www.twitter.com" target="_blank"
                 ><img src="./img/twitter.png" alt="twitter"
               /></a>
             </div>
@@ -160,16 +160,16 @@
               </p>
             </div>
             <div class="card-social-icons">
-              <a href="#" target="_blank"
+              <a href="https://www.facebook.com" target="_blank"
                 ><img src="./img/facebook.png" alt="facebook"
               /></a>
-              <a href="#" target="_blank"
+              <a href="https://www.github.com" target="_blank"
                 ><img src="./img/GitHub.png" alt="github"
               /></a>
-              <a href="#" target="_blank"
+              <a href="https://www.instagram.com" target="_blank"
                 ><img src="./img/instagram.png" alt="instagram"
               /></a>
-              <a href="#" target="_blank"
+              <a href="https://www.twitter.com" target="_blank"
                 ><img src="./img/twitter.png" alt="twitter"
               /></a>
             </div>
