--- a/product.html
+++ b/product.html
@@ -1,188 +1,222 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Product</title>
-    <link rel="shortcut icon" href="img/logo.png" type="image/x-icon">
-    <link rel="stylesheet" href="./css/bootstrap.min.css">
-    <link rel="stylesheet" href="./css/product.css">
-</head>
-<body>
-  <div class="about-header-upper">
-    <ul>
-      <li><a href="./index.html">Home</a></li>
-      <li><a href="./product.html"class="active">Product</a></li>
-      <li><a href="./about.html" >About</a></li>
-      <li><a href="./contact.html">Contact</a></li>
-    </ul>
-  </div>
-
-<h1 class="title"> Our Products</h1>
-
-  <!-- Start Card Design -->
-
-
-  <div class="container">
-    <div class="row row-cols-1 row-cols-md-4 g-4">
-
-
-      <!-- 1st Card Start -->
-
-      <div class="col">
-        <div class="card h-100">
-          <img src="img/men-shoes/download (1).jpg" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">This is as a natural lead-in to additional .</p>
-            <p>$1200</p>
-            <button class="btn btn-primary w-100" type="button">Buy</button>
-          </div>
-        </div>
-      </div>
-
-      <!-- 1st Card End -->
-
-
-      <!-- 2nd Card Start -->
-
-      <div class="col">
-        <div class="card h-100">
-          <img src="img/men-shoes/download (10).jpg" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">This is  tbestprodact a short card.</p>
-            <p>$1200</p>
-            <button class="btn btn-primary w-100" type="button">Buy</button>
-          </div>
-        </div>
-      </div>
-
-      <!-- 2nd Card end -->
-
-
-      <!-- 3rd Card Start -->
-
-      <div class="col">
-        <div class="card h-100">
-          <img src="img/men-shoes/download (11).jpg" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">This is a o additional additional content.</p>
-            <p>$1200</p>
-            <button class="btn btn-primary w-100" type="button">Buy</button>
-          </div>
-        </div>
-      </div>
-
-      <!-- 3rd Card end -->
-
-      <!-- 4th Card Start -->
-
-      <div class="col">
-        <div class="card h-100">
-          <img src="img/men-shoes/download (4).jpg" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">This iural lead-in to ntent is a little bit longer.</p>
-            <p>$1200</p>
-            <button class="btn btn-primary w-100" type="button">Buy</button>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <!-- 4th card End -->
-
-
-    <div class="row row-cols-1 row-cols-md-4 g-4">
-
-
-    <!-- 5th card Start -->
-
-      <div class="col">
-        <div class="card h-100">
-          <img src="img/men-shoes/download (12).jpg" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">This is a ng text below lead-in to additional .</p>
-            <p>$1200</p>
-            <button class="btn btn-primary w-100" type="button">Buy</button>
-          </div>
-        </div>
-      </div>
-
-      <!-- 5th Card End -->
-
-      <!-- 6th Card Start -->
-
-      <div class="col">
-        <div class="card h-100">
-          <img src="img/men-shoes/download (2).jpg" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">This is best prodact of this site a short card.</p>
-            <p>$1200</p>
-            <button class="btn btn-primary w-100" type="button">Buy</button>
-          </div>
-        </div>
-      </div>
-
-      <!-- 6th Card end -->
-
-      <!-- 7th Card Start -->
-
-      <div class="col">
-        <div class="card h-100">
-          <img src="img/men-shoes/download (6).jpg" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">This is a best prodact of this site a o additional content.</p>
-            <p>$1200</p>
-            <button class="btn btn-primary w-100" type="button">Buy</button>
-          </div>
-        </div>
-      </div>
-
-      <!-- 7th Card End -->
-
-      <!-- 8th Card Start -->
-
-      <div class="col">
-        <div class="card h-100">
-          <img src="img/men-shoes/download (7).jpg" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">This iural lead-in to ntent is a little bit longer.</p>
-            <p>$1200</p>
-            <button class="btn btn-primary w-100" type="button">Buy</button>
-          </div>
-        </div>
-      </div>
-
-      <!-- 8th Card End -->
-
-
-
-    </div>
-  </div>
-
-  <div class="about-footer">
-    <div class="footer-menu">
+    <link rel="shortcut icon" href="img/logo.png" type="image/x-icon" />
+    <link rel="stylesheet" href="./css/bootstrap.min.css" />
+    <link rel="stylesheet" href="./css/product.css" />
+  </head>
+  <body>
+    <div class="about-header-upper">
       <ul>
         <li><a href="./index.html">Home</a></li>
+        <li><a href="./product.html" class="active">Product</a></li>
         <li><a href="./about.html">About</a></li>
         <li><a href="./contact.html">Contact</a></li>
       </ul>
     </div>
-    <div class="footer-copyright">
-      ErrorShop is Designed by
-      <a href="https://github.com/errorinterface">ErrorInterface</a> &copy;
-      2022 All Rights Reserved.
-    </div>
-  </div>
 
-</body>
-<script src="js/bootstrap.min.js"></script>
+    <h1 class="title">Our Products</h1>
+
+    <!-- Start Card Design -->
+
+    <div class="container">
+      <div class="row row-cols-1 row-cols-md-4 g-4">
+        <!-- 1st Card Start -->
+
+        <div class="col">
+          <div class="card h-100">
+            <img
+              src="img/men-shoes/download (1).jpg"
+              class="card-img-top"
+              alt="..."
+            />
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">
+                This is as a natural lead-in to additional .
+              </p>
+              <p>$1200</p>
+              <button class="btn btn-primary w-100" type="button">Buy</button>
+            </div>
+          </div>
+        </div>
+
+        <!-- 1st Card End -->
+
+        <!-- 2nd Card Start -->
+
+        <div class="col">
+          <div class="card h-100">
+            <img
+              src="img/men-shoes/download (10).jpg"
+              class="card-img-top"
+              alt="..."
+            />
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">This is tbestprodact a short card.</p>
+              <p>$1200</p>
+              <button class="btn btn-primary w-100" type="button">Buy</button>
+            </div>
+          </div>
+        </div>
+
+        <!-- 2nd Card end -->
+
+        <!-- 3rd Card Start -->
+
+        <div class="col">
+          <div class="card h-100">
+            <img
+              src="img/men-shoes/download (11).jpg"
+              class="card-img-top"
+              alt="..."
+            />
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">
+                This is a o additional additional content.
+              </p>
+              <p>$1200</p>
+              <button class="btn btn-primary w-100" type="button">Buy</button>
+            </div>
+          </div>
+        </div>
+
+        <!-- 3rd Card end -->
+
+        <!-- 4th Card Start -->
+
+        <div class="col">
+          <div class="card h-100">
+            <img
+              src="img/men-shoes/download (4).jpg"
+              class="card-img-top"
+              alt="..."
+            />
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">
+                This iural lead-in to ntent is a little bit longer.
+              </p>
+              <p>$1200</p>
+              <button class="btn btn-primary w-100" type="button">Buy</button>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- 4th card End -->
+
+      <div class="row row-cols-1 row-cols-md-4 g-4">
+        <!-- 5th card Start -->
+
+        <div class="col">
+          <div class="card h-100">
+            <img
+              src="img/men-shoes/download (12).jpg"
+              class="card-img-top"
+              alt="..."
+            />
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">
+                This is a ng text below lead-in to additional .
+              </p>
+              <p>$1200</p>
+              <button class="btn btn-primary w-100" type="button">Buy</button>
+            </div>
+          </div>
+        </div>
+
+        <!-- 5th Card End -->
+
+        <!-- 6th Card Start -->
+
+        <div class="col">
+          <div class="card h-100">
+            <img
+              src="img/men-shoes/download (2).jpg"
+              class="card-img-top"
+              alt="..."
+            />
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">
+                This is best prodact of this site a short card.
+              </p>
+              <p>$1200</p>
+              <button class="btn btn-primary w-100" type="button">Buy</button>
+            </div>
+          </div>
+        </div>
+
+        <!-- 6th Card end -->
+
+        <!-- 7th Card Start -->
+
+        <div class="col">
+          <div class="card h-100">
+            <img
+              src="img/men-shoes/download (6).jpg"
+              class="card-img-top"
+              alt="..."
+            />
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">
+                This is a best prodact of this site a o additional content.
+              </p>
+              <p>$1200</p>
+              <button class="btn btn-primary w-100" type="button">Buy</button>
+            </div>
+          </div>
+        </div>
+
+        <!-- 7th Card End -->
+
+        <!-- 8th Card Start -->
+
+        <div class="col">
+          <div class="card h-100">
+            <img
+              src="img/men-shoes/download (7).jpg"
+              class="card-img-top"
+              alt="..."
+            />
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">
+                This iural lead-in to ntent is a little bit longer.
+              </p>
+              <p>$1200</p>
+              <button class="btn btn-primary w-100" type="button">Buy</button>
+            </div>
+          </div>
+        </div>
+
+        <!-- 8th Card End -->
+      </div>
+    </div>
+
+    <div class="about-footer">
+      <div class="footer-menu">
+        <ul>
+          <li><a href="./index.html">Home</a></li>
+          <li><a href="./about.html">About</a></li>
+          <li><a href="./contact.html">Contact</a></li>
+        </ul>
+      </div>
+      <div class="footer-copyright">
+        ErrorShop is Designed by
+        <a href="https://github.com/errorinterface">ErrorInterface</a> &copy;
+        2022 All Rights Reserved.
+      </div>
+    </div>
+  </body>
+  <script src="js/bootstrap.min.js"></script>
 </html>
