--- a/contact.html
+++ b/contact.html
@@ -4,18 +4,18 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" href="img/logo.png" type="image/x-icon">
-    <link rel="stylesheet" href="./css/contact.css">
+    <link rel="shortcut icon" href="img/logo.png" type="image/x-icon" />
+    <link rel="stylesheet" href="./css/contact.css" />
     <title>Contact</title>
   </head>
   <body>
-     <!-- header part start -->
+    <!-- header part start -->
     <div class="about-header-upper">
       <ul>
         <li><a href="./index.html">Home</a></li>
         <li><a href="./product.html">Product</a></li>
-        <li><a href="./about.html" class="active">About</a></li>
-        <li><a href="./contact.html">Contact</a></li>
+        <li><a href="./about.html">About</a></li>
+        <li><a href="./contact.html" class="active">Contact</a></li>
       </ul>
     </div>
     <!-- header part end -->
